7. Fixed word overflow issue in post templates

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -401,6 +401,7 @@ p {
   padding-right: 0;
   padding-top: 0;
   margin-bottom: 1.45rem;
+  font-size: 16px;
 }
 pre {
   margin-left: 0;
